# ai-data-narrative

./: .env.example  .gitignore  Dockerfile  README.md  README_EN.md  REQUIREMENTS_CN.docx  app.py  day2_publish_content.md  publish_wechat.py  pyproject.toml  requirements.txt  requirements_extracted.txt  run.py
ai-data-narrative/: .dockerignore  .gitignore  README_CN.md  docker-compose.yml  requirements.txt  run.py
ai-data-narrative/data/: customer_data.csv  sales_data.csv
ai-data-narrative/output/: events_20260602_111424.json  events_20260602_111540.json  events_20260602_113332.json  perf_20260602_111424.json  perf_20260602_111540.json  perf_20260602_113332.json
ai-data-narrative/tests/: test_data_input.py  test_data_understand.py  test_phase3.py  test_phase5.py
app/: streamlit_app.py
archive/unused_modules/: app.py  enhanced_app.py  manager.py  translator.py  wechat_real.py
config/: wechat.json
data/: employee_data.xlsx  入出院交手术_肿瘤血液科.xlsx  总的肿瘤血液科数据说明.txt
data/samples/: index.json
examples/: generate_sample_data.py  run_mock_demo.py
scripts/: generate_samples.py  generate_samples_v2.py
src/: __init__.py  config.py  llm_cache.py  llm_client.py  pipeline.py
src/ai_data_narrative/: config.py  interfaces.py  models.py
src/analysis/: chart_describer_agent.py  data_understanding_agent.py  timeseries_agent.py
src/api_publish/: publisher.py
src/automation/: __init__.py  scheduler.py
src/i18n/: __init__.py
tests/: test_agents.py  test_evaluation.py  test_execution.py  test_phase2.py  test_phase4.py  test_todo_manager.py  test_workflow_engine.py
(+131 files in other folders)
