[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-data-narrative"
version = "0.1.0"
description = "AI-driven data storytelling workflow system"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.55.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",
    "networkx>=3.2.0",
    "openai>=1.30.0",
    "anthropic>=0.28.0",
    "pydantic>=2.7.0",
    "pytest>=8.0.0",
    "python-dotenv>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q --tb=short"

[tool.setuptools.packages.find]
where = ["src"]
